# iWatchRoad

./: README.md
code/: .env.example  .gitignore  Procfile  index.html  package-lock.json  package.json  railway.toml  render.yaml  vite.config.ts
code/backend/: manage.py  process_csv.py  pyproject.toml  requirements.txt  start_production.py
code/backend/accounts/: urls.py  views.py
code/backend/dashcam_processor/: .gitignore  blurring.py  gps_parser.py  main.py  ocr_processor.py  pothole_grading.py  requirements.txt  yolo_detection.py
code/backend/pothole_tracker/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
code/backend/potholes/: admin.py  apps.py  home_views.py  models.py  pagination.py  serializers.py  upload_views.py  urls.py  views.py
code/backend/potholes/management/commands/: generate_large_dummy_data.py  import_csv_with_new_fields.py  import_large_csv.py  import_limited_csv.py  populate_potholes.py  process_dashcam_video.py
code/backend/potholes/migrations/: 0001_initial.py  0002_pothole_frame_image_base64_pothole_frame_number.py  0003_pothole_contractor_pothole_road_c_date.py
code/backend/staticfiles/: index.html
code/backend/staticfiles/assets/: index-B7Qo5rZ7.css  index-Cw6-YMf_.js  leaflet-BEKwhWqD.js  vendor-vtvkNrF5.js
code/backend/templates/: home.html
code/backend/templates/registration/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
code/public/: 404.html
code/src/: App.css  App.tsx  index.css
(+20 files in other folders)
